--- a/main/templates/code/base.html
+++ b/main/templates/code/base.html
@@ -19,11 +19,12 @@
   <body  class="fw-bold" style='font-family:Roboto;'>
     <!-- main menu html code -->
     <nav
-      class="navbar sticky-top navbar-expand-lg bg-body-tertiary"
-      data-bs-theme="light"
+    class="navbar sticky-top navbar-expand-lg bg-body-tertiary"
+    data-bs-theme="light"
     >
-      <div class="container-md">
-        <a class="navbar-brand" href="/dashboard">Dashboard</a>
+    <div class="container-md">
+      {% if user.is_authenticated %}
+      <a class="navbar-brand" href="/dashboard">Dashboard</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,7 +38,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            {% if user.is_authenticated %}
+
 
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/teams"
@@ -82,12 +83,26 @@
               >
             </li>
             {% else %}
+            <a class="navbar-brand" href="/home">Home</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
               <a class="nav-link Enabled" href="/login" aria-disabled="False"
                 >Login</a
               >
             </li>
+          </ul>
             {% endif %}
           </ul>
         </div>
@@ -105,7 +120,6 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"> </script>
-<script src="{% static 'script.js'%}"></script>
 
       <!-- charts scripts -->
 
