--- a/main/templates/code/base.html
+++ b/main/templates/code/base.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body  class="fw-bold" style='font-family:Roboto;'>
+  <body  class="fw-bold">
     <!-- main menu html code -->
     <nav
     class="navbar sticky-top navbar-expand-lg bg-body-tertiary"
