--- a/main/tasks/templates/code/tasks.html
+++ b/main/tasks/templates/code/tasks.html
@@ -2,7 +2,7 @@
 
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js' integrity='sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==' crossorigin='anonymous' referrerpolicy='no-referrer'></script> 
-<script src="{% static 'script.js'%}"></script>
+
 
 
 <!-- the html++ bootstrap code here -->
@@ -50,7 +50,7 @@
 <div class='row row-cols-1 row-cols-md-4 g-4'>
 
   {% for department_task in department_tasks %}
-    <div class='col'>
+    <div class='col department_task_col'>
       <div class='card m-1'>
         {% if department_task.completed %}
         <div class='card-header'>Completed</div>
@@ -94,6 +94,10 @@
   {% endfor %}
 
     </div><!-- end of row div-->
+    <div class="container text-center mt-3 mb-5">
+  <button class="btn btn-secondary load_more_department_task"  id="">Load More</button>
+</div>
+
   </div><!-- the department tasks section container END DIV-->
 </div><!-- end div of class='container position-relative' -->
 
@@ -186,14 +190,14 @@
 
 
 <!-- the cards TASKS -->
-<div id="show_tasks_hidden" hidden>
+
 
 <div class='container'>
 
     <div class='row row-cols-1 row-cols-md-4 g-4'>
 
     {% for task in employer_tasks %}
-      <div class='col' id='col_id'>
+      <div class='col task_col'>
         <div class='card m-1'>
 
           {% if task.completed %}
@@ -254,10 +258,10 @@
 
   </div><!-- end of 'row row-cols-1 row-cols-md-4 g-4' -->
 
-</div>
+
 
 <div class="container text-center mt-3">
-  <button class="btn btn-secondary" id="show_tasks">Load More</button>
+  <button class="btn btn-secondary load_more_task"  id="">Load More</button>
 </div>
 
 
@@ -343,7 +347,7 @@
  <div class='container'>
     <div class='row row-cols-1 row-cols-md-4 g-4'>
     {% for lead in leads %}
-      <div class='col'>
+      <div class='col lead_col'>
 
         <div class='card m-1'>
 
@@ -398,46 +402,12 @@
 
 </div><!-- end of row-->
 
+<div class="container text-center mt-3 mb-5">
+  <button class="btn btn-secondary load_more_lead"  id="">Load More</button>
+</div>
+
 </div><!-- end of 'container' -->
-
-<!-- script section that uses ajax on forms -->
-<script>
-  $('.department_task_complete_button').on('click',department_task_complete_ajax)
-</script>
-<script>
-  $('.department_task_on_progress_button').on('click',department_task_on_progress_ajax)
-</script>
-<script>
-  $('.department_task_delete_button').on('click',department_task_delete_ajax)
-</script>
-<script>
-  $(document).on('submit','#add_task_submit_form',add_task_ajax)
-</script>
-<script>
-  $('.task_complete_button').on('click',complete_task_ajax)
-</script>
-<script>
-  $('.task_on_progress_button').on('click',on_progress_task_ajax)
-</script>
-<script>
-  $('.task_delete_button').on('click',task_delete_ajax)
-</script>
-<script>
-  $(document).on('submit','#add_lead_submit_form',add_lead_ajax)
-</script>
-
-<script>
-  $('.lead_complete_button').on('click',lead_complete_ajax)
-</script>
-<script>
-  $('.lead_on_progress_button').on('click',lead_on_progress_ajax)
-</script>
-<script>
-  $('.lead_delete_button').on('click',lead_delete_ajax)
-</script>
-<script>
-  $('#show_tasks').on('click',show_tasks)
-</script>
+<script src="{% static 'script.js'%}"></script>
 
 </div>
 {% endblock content%}
