--- a/main/tasks/templates/code/edit_task.html
+++ b/main/tasks/templates/code/edit_task.html
@@ -14,9 +14,13 @@
 
     <div class="mb-3">
       <label for="{{edit_task_form.id}}" class="form-label">Description</label>
-      {% render_field edit_task_form.content type="text" id=edit_task_form.id placeholder=task_data.content class="form-control" %}
+      {% render_field edit_task_form.description type="text" id=edit_task_form.id placeholder=task_data.description class="form-control" %}
     </div>
 
+    <div class="mb-3">
+      <label for="{{edit_task_form.id}}" class="form-label">Additional Description</label>
+      {% render_field edit_task_form.additional_description type="text" id=edit_task_form.id placeholder=task_data.additional_description class="form-control" %}
+    </div>
     <!-- submit button -->
     <button class="btn btn-success" id="liveAlertPlaceholder" type="submit" name="test" value="test" >Save</button>
     <a class="btn btn-danger" href='/tasks' type="submit">Cancel</a>
