ADDED:side nav bar that have two views: hide or expand and udjusted the width for all pages

--- a/main/user/templates/code/home.html
+++ b/main/user/templates/code/home.html
@@ -1,6 +1,4 @@
-{% extends 'code/base.html' %}{% block content %}{{test}}
-{% load static %}
-<script type="text/javascript" src="{% static "script.js" %}"></script>
+{% extends 'code/base.html' %}{% block content %}
+testtesttest {{test}}
 
-<button class="btn btn-info" onclick="getNumber()">click me</button>
 {% endblock content %}
