--- a/main/tasks/templates/code/tasks.html
+++ b/main/tasks/templates/code/tasks.html
@@ -260,7 +260,7 @@
 
 </div><!-- end of 'container' -->
 
-</div><!-- end of 'container'style='margin-top:4rem ;' on line 94 -->
+{% comment %} </div><!-- end of 'container'style='margin-top:4rem ;' on line 94 --> {% endcomment %}
 
 
 
@@ -268,8 +268,8 @@
 
 <!-- the title of the Leads and LEADS section --> 
 
-
-<div class='container'style='margin-top:4rem ;'>
+ <div class='col-9-end align-self-end'>
+<div class='container' style='margin-top:4rem;'>
 <figure class='text-center'>
   <blockquote class='blockquote'>
     <h1>Leads</h1>
@@ -282,7 +282,7 @@
 <!-- lead progression bar title -->
 <div class='col-sm-auto'>
     <p>Lead Progression</p>
-  </div>
+</div>
 
 <!-- lead progression bar -->
 
@@ -355,6 +355,7 @@
 
 
  <!-- the container end div-->
+
  <div class='container'>
     <div class='row row-cols-1 row-cols-md-4 g-4'>
     {% for lead in leads %}
@@ -412,6 +413,9 @@
   </div><!-- end of 'col' -->
 
 </div><!-- end of row-->
+
+</div>
+
 
 <div class="container text-center mt-3 mb-5">
   <button class="btn btn-secondary load_more_lead"  id="">Load More</button>
