backround color is changed

--- a/main/templates/code/base.html
+++ b/main/templates/code/base.html
@@ -14,7 +14,7 @@
     />
   </head>
 
-<body>
+<body style="background:#323232">
 
 
 
@@ -194,7 +194,7 @@
 
 
 </div><!-- end of col div-->
-<div class="col-9 ">
+<div class="col-9">
 <div class="container">
 <div class="position-absolute align-self-center col-lg-9">
   <div id="liveAlertPlaceholder"></div>
