ADDED:much better looking profile page with weekly and monthly insights

--- a/main/dashboard/templates/code/dashboard.html
+++ b/main/dashboard/templates/code/dashboard.html
@@ -3,7 +3,7 @@
 
 
 <div class='container'>
-  <div class="alert alert-info">FOR NOW THIS PAGE ISNT FUNCTIONAL AND ONLY FOR PRESENTATION</div>
+  <div class="alert alert-info">FOR NOW THIS PAGE ISNT FUNCTIONAL AND ONLY FOR OVERVIEW</div>
 
 
         <div class="graph m-2 p-3 border border-secondary rounded border-3">
