--- a/main/teams/templates/code/teams.html
+++ b/main/teams/templates/code/teams.html
@@ -20,12 +20,12 @@
     </div>
   </div>
   <!-- this is the workers rows table -->
-  <div class="border border-info border-1 pt-2">
-    <table class="table table-md table-hover">
+
+    <table class="table table-md table-hover border border-info ">
       <thead class="table-dark border-bottom border-secondary">
         <tr>
           <th scope="col">#</th>
-          <th scope="col">First</th>
+          <th scope="col">task id</th>
           <th scope="col">Last</th>
           <th scope="col">Handle</th>
           <th scope="col">View</th>
@@ -56,6 +56,5 @@
       </tbody>
     </table>
   </div>
-</div>
 
 {% endblock content %}
