added couple of graphs to dashboard page(for testing only)

--- a/main/dashboard/templates/code/dashboard.html
+++ b/main/dashboard/templates/code/dashboard.html
@@ -61,6 +61,58 @@
 
 
 
+</div>
+ <div class="graph m-2 p-3 border border-secondary rounded border-3">
+
+
+        <h3>Graph</h3>
+
+          <div style="width: 100%; height: 30rem">
+          {{ pie_chart|safe }}
+          </div>
+
+    <div class='text-body-secondary mt-3'>
+          <h5 class=''><BOLD class="text-light-emphasis">Title: </BOLD>tete</h5>
+          <p class=''><BOLD class="text-light-emphasis">Description: </BOLD>tetetete</p>
+          <p class=''><BOLD class="text-light-emphasis">Additional Description: </BOLD>sasasa</p>
+      <div class='' style='margin-top: 15px'>
+        <small class='text-body-secondary m-1' >10.00.00</small>
+      </div><!-- end of -->
+
+    </div><!-- end of text-body secondery-->
+
+        <button  name='' class='btn btn-secondary' member_id='' id=''>Refresh Query</button>
+        <button  name='' class='btn btn-secondary ' member_id='' id=''>Edit Graph</button>
+        <button type='button'  name='' class='btn btn-danger' member_id='' id=''>Remove Graph</button>
+
+</div>
+
+ <div class="graph m-2 p-3 border border-secondary bg-dark rounded border-3">
+
+
+        <h3>Graph</h3>
+
+          <div style="width: 100%; height: 30rem">
+          {{ line_2_chart|safe }}
+          </div>
+
+    <div class='text-body-secondary mt-3'>
+          <h5 class=''><BOLD class="text-light-emphasis">Title: </BOLD>tete</h5>
+          <p class=''><BOLD class="text-light-emphasis">Description: </BOLD>tetetete</p>
+          <p class=''><BOLD class="text-light-emphasis">Additional Description: </BOLD>sasasa</p>
+      <div class='' style='margin-top: 15px'>
+        <small class='text-body-secondary m-1' >10.00.00</small>
+      </div><!-- end of -->
+
+    </div><!-- end of text-body secondery-->
+
+        <button  name='' class='btn btn-secondary' member_id='' id=''>Refresh Query</button>
+        <button  name='' class='btn btn-secondary ' member_id='' id=''>Edit Graph</button>
+        <button type='button'  name='' class='btn btn-danger' member_id='' id=''>Remove Graph</button>
+
+</div>
+
+
 
 </div><!-- end of 'container' -->
 
